--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,22 @@
 {
   "name": "client",
-  "proxy":"http://localhost:8080",
+  "proxy": "http://localhost:8050",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.11.5",
     "axios": "^1.6.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.21.0",
+    "react-redux": "^9.0.0",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-spinner": "^0.2.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
