--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "shop_now",
+  "name": "doctor_appointment",
   "version": "1.0.0",
-  "description": "ecommerce web app",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix ./client",
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
-  "author": "puja singh",
+  "keywords": [],
+  "author": "PujaSingh",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "concurrently": "^8.2.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
+    "moment": "^2.29.4",
+    "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2",
-    "react-icons": "^4.12.0",
-    "slugify": "^1.6.6"
+    "nodemon": "^3.0.2"
   }
 }
